<resources>
    <string name="app_name">PAGAPAY</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dev">Powered by Otema Technologies</string>
    <string name="loading">Loading</string>
    <string name="password">Password / PIN </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password / PIN</string>
    <string name="phone_number">Phone Number</string>
    <string name="other_name">Other Names</string>
    <string name="agree">I accept the</string>
    <string name="id_passport_number">Id/passport number</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="do_not_have_an_account_register">Do\'nt have an account? Register</string>
    <string name="ksh_0_00">KSH 0.00</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="last_name">Last Name</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="recipient_email_account_number">Recipient phone Number/Account Number</string>
    <string name="send">SEND</string>
    <string name="send_money">Send Money</string>
    <string name="sending_money_has_never_been_easier">Sending money has never been easier</string>
    <string name="request_money">Withdraw Cash</string>
    <string name="make_a_request_for_payment">Make A cash withdrawal</string>
    <string name="pay_your_bills_without_straining">Pay your bills without straining</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="history">History</string>
    <string name="wallet_balance_image">Wallet Balance Image</string>
    <string name="check_the_history_of_your_transactions">Check the history of your transactions</string>
    <string name="send_money_icon">Send Money Icon</string>
    <string name="request_image_icon">Withdraw Image Icon</string>
    <string name="pay_bill_icon">Pay Bill Icon</string>
    <string name="transaction_history_icon">Transaction History Icon</string>
    <string name="logo">Logo</string>
    <string name="slide">The most affordable money transfer app</string>
    <string name="slide1">The most secure money transfer app</string>
    <string name="slide2">The most convenient way to send and receive money</string>
    <string name="slide3">Send and receive money from anywhere anytime</string>
    <string name="slide4">Paga Pay</string>
    <string name="receiver">RECEIVER</string>
    <string name="Tamount">AMOUNT</string>
    <string name="sender">SENDER</string>
    <string name="transaction_date">TRANSACTION DATE</string>
    <string name="transaction_id">TRANSACTION ID</string>
    <string name="id">ID</string>
    <string name="hash">#</string>
    <string name="agent_number">Agent Number</string>
    <string name="withdraw">Withdraw</string>
    <string name="recover_password">Recover password</string>
    <string name="reset_password">Reset your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="and_the">and the</string>
    <string name="terms_of_service">terms of service</string>
</resources>
