<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpActivity"
    android:background="@color/colorBlue">
    <TextView
        android:id="@+id/lTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_xl"
        app:layout_constraintBottom_toTopOf="@+id/lEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />


    <AutoCompleteTextView
        android:id="@+id/txtUname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:ems="14"
        android:drawableLeft="@drawable/ic_perm_identity"
        android:drawablePadding="@dimen/padding_sm"
        android:backgroundTint="@color/colorWhite"
        android:shadowRadius="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lTitle"
        app:layout_constraintBottom_toTopOf="@+id/lEmail"
        />

    <AutoCompleteTextView
        android:id="@+id/txtLemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:ems="14"
        android:backgroundTint="@color/colorWhite"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/padding_sm"
        android:shadowRadius="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUname"
        app:layout_constraintBottom_toTopOf="@+id/txtPhone"/>

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:ems="14"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:drawableLeft="@drawable/ic_contact_phone"
        android:drawablePadding="@dimen/padding_sm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLemail"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:backgroundTint="@color/colorWhite"
        android:drawableLeft="@drawable/ic_lock_outline"
        android:drawablePadding="@dimen/padding_sm"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintBottom_toTopOf="@+id/txtCpass"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtCpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:backgroundTint="@color/colorWhite"
        android:drawableLeft="@drawable/ic_lock_outline"
        android:drawablePadding="@dimen/padding_sm"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRLogin"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btnRLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/rounded_dark_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btnRRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnRRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_dark_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>