<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity"
    android:background="@color/colorBlue">
    <TextView
        android:id="@+id/lTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_xl"
        app:layout_constraintBottom_toTopOf="@+id/lEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <AutoCompleteTextView
        android:id="@+id/lEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:hint="@string/email"
        android:backgroundTint="@color/colorWhite"
        android:ems="14"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/padding_sm"
        android:shadowRadius="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lTitle"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:hint="@string/password"
        android:backgroundTint="@color/colorWhite"
        android:drawableLeft="@drawable/ic_lock_outline"
        android:drawablePadding="@dimen/padding_sm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lEmail"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/rounded_dark_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_dark_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>